--- a/BlazorWebsite/BlazorWebsite.Server/BlazorWebsite.Server.csproj
+++ b/BlazorWebsite/BlazorWebsite.Server/BlazorWebsite.Server.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.Server" Version="0.2.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.2" />
   </ItemGroup>
 
   <ItemGroup>
