--- a/.gitignore
+++ b/.gitignore
@@ -287,3 +287,4 @@ __pycache__/
 *.odx.cs
 *.xsd.cs
 BlazorWebsite/BlazorWebsite.Server/appsettings.json
+BlazorWebsite/BlazorWebsite.Server/web.config
