fix layout after update to blazor 0.3, example of working js interop

--- a/BlazorWebsite/BlazorWebsite.Client/BlazorWebsite.Client.csproj
+++ b/BlazorWebsite/BlazorWebsite.Client/BlazorWebsite.Client.csproj
@@ -46,4 +46,8 @@
     <BlazorGenerate Remove="Pages\BlogPost.cshtml" />
   </ItemGroup>
 
+  <ItemGroup>
+    <BlazorGenerate Remove="Pages\AddPost.cshtml" />
+  </ItemGroup>
+
 </Project>
