Add projects and info about me page

--- a/BlazorWebsite/BlazorWebsite.Client/BlazorWebsite.Client.csproj
+++ b/BlazorWebsite/BlazorWebsite.Client/BlazorWebsite.Client.csproj
@@ -62,4 +62,8 @@
     <BlazorGenerate Remove="Pages\www.cshtml" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
